tests/errors/inconsistent-voice-count.typ
#import "../../src/lib.typ": score

#score(
  time: "4/4",
  bars: (
    (notes: ("c5:w", "e4:w")),
    (notes: "d5:w"),
  ),
)
